--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -7,7 +7,13 @@ header {
   flex-direction: column;
   z-index: 2;
   flex: 1;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
+}
+
+.container > * {
+  flex-shrink: 0;
 }
 
 .footer {
